# buscolite

./: .gitignore  404.html  CITATION.cff  LICENSE.md  MANIFEST.in  README.md  TESTING.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml
.agents/: AGENTS.md
.github/workflows/: docs.yml  python-publish.yml  tests.yml
api/augustus/: index.html
api/busco/: index.html
api/fastx/: index.html
api/gff/: index.html
api/log/: index.html
api/overview/: index.html
api/search/: index.html
api/utilities/: index.html
buscolite/: __init__.py  __main__.py  __version__.py  augustus.py  busco.py  fasta.py  fastx.py  gff.py  help_formatter.py  log.py  plot.py  plot_cli.py  search.py  utilities.py
buscolite/data/: HsDHC.prfl  busco_test.fa
contributing/: index.html
docs/: contributing.md  index.md  installation.md  quickstart.md  usage.md
docs/api/: augustus.md  busco.md  fastx.md  gff.md  log.md  overview.md  search.md  utilities.md
installation/: index.html
quickstart/: index.html
search/: search_index.json
tests/: conftest.py  test.gff3  test.out  test.softmasked.fa  test_busco.py  test_fasta.py  test_fastx.py  test_filtering.py  test_gff.py  test_log.py  test_main.py  test_plot.py  test_search.py  test_utilities.py
tests/integration/: README.md  test_buscolite_api.py  test_buscolite_cli.py
usage/: index.html
